@startuml classDiagram
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam classAttributeFontSize 13

class Employees {
    -id: int
    -firstname: string
    -lastname: string
    -email: string
    -password: string
    -gender: string
    -phone: string
    -address: string
    -job: string
    -date_of_birth: date
    -date_of_joining: date
    -is_admin: boolean
    -employee_code: string
}

class Teams {
    -id: int
    -name: string
    -description: string
}

class Leaves {
    -id: int
    -startDate: date
    -endDate: date
    -type: string
    -reason: string
    -comment: string
    -status: string
}

class Missions {
    -id: int
    -name: string
    -description: string
    -start_date: date
    -end_date: date
    -status: string
}

class ForumPosts {
    -id: int
    -title: string
    -category: string
    -content: string
    -created_at: date
    -created_by: Employee
}

class Trainings {
    -id: int
    -name: string
    -description: string
    -date: date
    -duration: int
    -location: string
    -status: string
}

class ForumComments {
    -id: int
    -content: string
    -created_at: date
    -created_by: Employee
}

class Announcements {
    -id: int
    -title: string
    -content: string
    -created_at: date
    -created_by: Employee
}

Employees "1" -- "0..*" Leaves
Employees "1" -- "0..*" Trainings
Employees "1" -- "0..*" ForumComments
Employees "1" -- "0..*" Announcements
ForumPosts "1" -- "0..*" ForumComments
ForumPosts "1" -- "1" Employees
Trainings "1" -- "0..*" Employees
Missions "1" -- "0..*" Employees
Teams "1" -- "0..*" Employees

@enduml